[gd_scene load_steps=54 format=3 uid="uid://bwiahpnowkge"]

[ext_resource type="Texture2D" uid="uid://tnw05yhxychg" path="res://assets/images/cats/kittyCrying.png" id="1_2wrln"]
[ext_resource type="Script" path="res://assets/scripts/enemy.gd" id="1_rdyb4"]
[ext_resource type="Texture2D" uid="uid://dcurfbii7dasx" path="res://assets/images/cats/CatRolling.png" id="2_mct6i"]
[ext_resource type="Texture2D" uid="uid://b6sl26ifs0rjc" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame1.png" id="4_hqqjt"]
[ext_resource type="Texture2D" uid="uid://c4mmp6fcb5j5a" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame2.png" id="5_jsbjb"]
[ext_resource type="Texture2D" uid="uid://dp5gfqaj42ml2" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame3.png" id="6_fpnuk"]
[ext_resource type="Texture2D" uid="uid://c88207dfiwsyo" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame4.png" id="7_1x47t"]
[ext_resource type="Texture2D" uid="uid://c4k6mby31bw0u" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame5.png" id="8_vxonw"]
[ext_resource type="Texture2D" uid="uid://bfaf4x86mfrma" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame6.png" id="9_sh2dx"]
[ext_resource type="Texture2D" uid="uid://do71vnsecas7p" path="res://assets/images/explosions/small-explosion-1-g/Sprites/frame7.png" id="10_o15ii"]
[ext_resource type="AudioStream" uid="uid://biacadurg7w8f" path="res://assets/audio/explosion.wav" id="11_tjc81"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8b747"]
atlas = ExtResource("1_2wrln")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xusgl"]
atlas = ExtResource("1_2wrln")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6vbb"]
atlas = ExtResource("1_2wrln")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17hwl"]
atlas = ExtResource("1_2wrln")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6grj"]
atlas = ExtResource("2_mct6i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eoan"]
atlas = ExtResource("2_mct6i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gevi"]
atlas = ExtResource("2_mct6i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0m3w"]
atlas = ExtResource("2_mct6i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcml1"]
atlas = ExtResource("2_mct6i")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0bro"]
atlas = ExtResource("2_mct6i")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooabm"]
atlas = ExtResource("2_mct6i")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cucyk"]
atlas = ExtResource("2_mct6i")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhma2"]
atlas = ExtResource("2_mct6i")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8yjc"]
atlas = ExtResource("2_mct6i")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7uu4"]
atlas = ExtResource("2_mct6i")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h674f"]
atlas = ExtResource("2_mct6i")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws807"]
atlas = ExtResource("2_mct6i")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n16c4"]
atlas = ExtResource("2_mct6i")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql15n"]
atlas = ExtResource("2_mct6i")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7c2s"]
atlas = ExtResource("2_mct6i")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63yxt"]
atlas = ExtResource("2_mct6i")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j6qn"]
atlas = ExtResource("2_mct6i")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2w51"]
atlas = ExtResource("2_mct6i")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djphm"]
atlas = ExtResource("2_mct6i")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7j8b"]
atlas = ExtResource("2_mct6i")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlwas"]
atlas = ExtResource("2_mct6i")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbl4a"]
atlas = ExtResource("2_mct6i")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wylaq"]
atlas = ExtResource("2_mct6i")
region = Rect2(736, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ei6"]
atlas = ExtResource("2_mct6i")
region = Rect2(768, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl13h"]
atlas = ExtResource("2_mct6i")
region = Rect2(800, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrx1p"]
atlas = ExtResource("2_mct6i")
region = Rect2(832, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0qqw"]
atlas = ExtResource("2_mct6i")
region = Rect2(864, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hm31"]
atlas = ExtResource("2_mct6i")
region = Rect2(896, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7foq"]
atlas = ExtResource("2_mct6i")
region = Rect2(928, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1313"]
atlas = ExtResource("2_mct6i")
region = Rect2(960, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwf03"]
atlas = ExtResource("2_mct6i")
region = Rect2(992, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_reg67"]
atlas = ExtResource("2_mct6i")
region = Rect2(1024, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4jar"]
atlas = ExtResource("2_mct6i")
region = Rect2(1056, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n55xm"]
atlas = ExtResource("2_mct6i")
region = Rect2(1088, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwbfj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b747")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xusgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6vbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17hwl")
}],
"loop": true,
"name": &"CatCry",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6grj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eoan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gevi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0m3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcml1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0bro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooabm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cucyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhma2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8yjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7uu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h674f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws807")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n16c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql15n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7c2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63yxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j6qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2w51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djphm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7j8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlwas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbl4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wylaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ei6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl13h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrx1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0qqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hm31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7foq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1313")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwf03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reg67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4jar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n55xm")
}],
"loop": true,
"name": &"CatRoll",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"CatWalk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_k3rw3"]
radius = 12.0

[sub_resource type="SpriteFrames" id="SpriteFrames_775s4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hqqjt")
}, {
"duration": 1.0,
"texture": ExtResource("5_jsbjb")
}, {
"duration": 1.0,
"texture": ExtResource("6_fpnuk")
}, {
"duration": 1.0,
"texture": ExtResource("7_1x47t")
}, {
"duration": 1.0,
"texture": ExtResource("8_vxonw")
}, {
"duration": 1.0,
"texture": ExtResource("9_sh2dx")
}, {
"duration": 1.0,
"texture": ExtResource("10_o15ii")
}],
"loop": false,
"name": &"Explosion",
"speed": 16.0
}]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_rdyb4")

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CatSprites" type="AnimatedSprite2D" parent="Area2D"]
position = Vector2(0, -8)
scale = Vector2(1.1, 1.1)
sprite_frames = SubResource("SpriteFrames_kwbfj")
animation = &"CatCry"
autoplay = "CatCry"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_k3rw3")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Area2D"]
position = Vector2(-8.34465e-07, 0)
scale = Vector2(1.3, 1.3)

[node name="Explosion" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_775s4")
animation = &"Explosion"
frame = 6
frame_progress = 1.0

[node name="Audio" type="AudioStreamPlayer2D" parent="Explosion"]
stream = ExtResource("11_tjc81")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="Area2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="Explosion/Audio" to="." method="_on_audio_finished"]
